Complete review comment interactions